🐛 fix page overflow

--- a/src/sass/_menupages.scss
+++ b/src/sass/_menupages.scss
@@ -31,10 +31,9 @@
   background-color: #f6f6f6;
   z-index: 1;
   position: relative;
-  padding: 0 1rem;
 
   &__header {
-    padding: 1rem 2rem 0 0;
+    padding: 1rem 2rem 0 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -107,6 +106,10 @@
 }
 
 .submenu {
+  max-width: 100%;
+  overflow: hidden;
+  padding: 0 1rem;
+
   &__title {
     text-transform: uppercase;
     position: relative;
@@ -140,6 +143,13 @@
   transform: scale(0);
   max-width: 100%;
 
+  &__header {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    flex: 1;
+  }
+
   &__title {
     margin: 0;
     white-space: nowrap;
@@ -156,10 +166,10 @@
 
   &__price {
     font-weight: bold;
-    flex: 1;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    padding-left: 0.5rem;
   }
 
   &__confirmation {
